[gd_scene load_steps=3 format=3 uid="uid://dt6dl46lpkhdt"]

[ext_resource type="Script" uid="uid://bpbkx3yfcvjdr" path="res://scripts/ui/BattleCard.gd" id="1_kbsfu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbsfu"]
bg_color = Color(0.2, 0.2, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.8, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="BattleCard" type="Control"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 181.0
script = ExtResource("1_kbsfu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kbsfu")

[node name="CardSprite" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 110.0
mouse_filter = 2
color = Color(0.3, 0.3, 0.8, 1)

[node name="CardTexture" type="TextureRect" parent="CardSprite"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 120.0
offset_right = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "卡片名稱"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="HPLabel" type="Label" parent="VBoxContainer/StatsContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 10
text = "HP:10"
horizontal_alignment = 1

[node name="ATKLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 10
text = "ATK:5"
horizontal_alignment = 1

[node name="SPLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 10
text = "SP:1/3"
horizontal_alignment = 1

[node name="SkillCDLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.3, 1)
theme_override_font_sizes/font_size = 10
text = "技能CD:0"
horizontal_alignment = 1

[node name="DragPreview" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
