# BattleCard.gd
extends Control

# ==================== ä¿¡å· ====================
signal card_clicked(card: Control)
signal card_dragged_to_enemy(card: Control, enemy: Control)
signal skill_button_pressed(card: Control)

# ==================== å¼•ç”¨ ====================
@onready var name_label = $VBoxContainer/NameLabel
@onready var hp_label = $VBoxContainer/StatsContainer/HPLabel
@onready var atk_label = $VBoxContainer/StatsContainer/ATKLabel
@onready var sp_label = $VBoxContainer/StatsContainer/SPLabel
@onready var skill_cd_label = $VBoxContainer/SkillCDLabel
@onready var card_sprite = $CardSprite
@onready var card_texture = $CardSprite/CardTexture # âœ… 1. æ–°å¢é€™ä¸€è¡Œ
@onready var panel = $Panel

# ==================== è³‡æ–™ ====================
var card_data: CardData = null
var is_dragging: bool = false
var drag_start_pos: Vector2 = Vector2.ZERO
var can_act: bool = true
var original_position: Vector2 = Vector2.ZERO  # æ–°å¢ï¼šè¨˜éŒ„åŸå§‹ä½ç½®
var current_multipliers: Dictionary = {}  # âœ… ä¿å­˜ç•¶å‰å€ç‡

# ==================== è¦–è¦ºåé¥‹ ====================
var slash_element_count: int = 0  # ç•¶å‰æ–¬æ“Šå›åˆç´¯ç©çš„æ¶ˆé™¤æ¬¡æ•¸ï¼ˆç”¨æ–¼ç™¼å…‰æ•ˆæœï¼‰
var base_border_color: Color = Color.WHITE  # åŸºç¤é‚Šæ¡†é¡è‰²
var is_bouncing: bool = false  # æ˜¯å¦æ­£åœ¨è·³èºå‹•ç•«ä¸­

# ==================== æŠ€èƒ½æ¨™è¨˜ ====================
var skill_marker_label: Label = null  # æŠ€èƒ½æ¨™è¨˜ï¼ˆâš”ï¸ï¼‰

# ==================== åˆå§‹åŒ– ====================

func _ready():
	# è¨­å®šæ‹–æ›³
	mouse_filter = Control.MOUSE_FILTER_STOP

	# è¨­å®šå¤–è§€ï¼ˆè‡¨æ™‚ï¼Œæœªä¾†æ›¿æ›æˆåœ–ç‰‡ï¼‰
	if card_sprite:
		card_sprite.color = Color(0.3, 0.3, 0.8, 1.0)  # è—è‰²

	# âœ… å‰µå»ºæŠ€èƒ½æ¨™è¨˜ Labelï¼ˆâš”ï¸ï¼‰
	create_skill_marker()

	# è¨˜éŒ„åˆå§‹ä½ç½®
	await get_tree().process_frame
	original_position = global_position

func setup(data: CardData):
	"""è¨­å®šå¡ç‰‡è³‡æ–™"""
	card_data = data
	update_display()

# âœ… 2. æ–°å¢åœ–ç‰‡/é¡è‰² fallback é‚è¼¯
	if not card_data:
		return

	# æ ¹æ“šå…ƒç´ è¨­ç½® Panel èƒŒæ™¯é¡è‰²
	if panel:
		var style_box = panel.get_theme_stylebox("panel").duplicate()
		if style_box is StyleBoxFlat:
			match card_data.element:
				Constants.Element.FIRE:
					style_box.bg_color = Color(0.4, 0.15, 0.15, 1.0)  # æ·±ç´…è‰²èƒŒæ™¯
					style_box.border_color = Color(1.0, 0.3, 0.2, 1.0)  # ç«ç´…è‰²é‚Šæ¡†
				Constants.Element.WATER:
					style_box.bg_color = Color(0.1, 0.2, 0.4, 1.0)  # æ·±è—è‰²èƒŒæ™¯
					style_box.border_color = Color(0.2, 0.5, 1.0, 1.0)  # æ°´è—è‰²é‚Šæ¡†
				Constants.Element.WOOD:
					style_box.bg_color = Color(0.1, 0.3, 0.15, 1.0)  # æ·±ç¶ è‰²èƒŒæ™¯
					style_box.border_color = Color(0.2, 0.8, 0.3, 1.0)  # æœ¨ç¶ è‰²é‚Šæ¡†
				Constants.Element.METAL:
					style_box.bg_color = Color(0.35, 0.35, 0.4, 1.0)  # æ·±éŠ€è‰²èƒŒæ™¯
					style_box.border_color = Color(0.9, 0.9, 0.9, 1.0)  # é‡‘éŠ€è‰²é‚Šæ¡†
				Constants.Element.EARTH:
					style_box.bg_color = Color(0.3, 0.25, 0.15, 1.0)  # æ·±åœŸè‰²èƒŒæ™¯
					style_box.border_color = Color(0.8, 0.6, 0.3, 1.0)  # åœŸé»ƒè‰²é‚Šæ¡†
				_:
					style_box.bg_color = Color(0.2, 0.2, 0.3, 1.0)  # é»˜èªæ·±ç°è—è‰²
					style_box.border_color = Color(0.5, 0.5, 0.8, 1.0)
			panel.add_theme_stylebox_override("panel", style_box)

	# æª¢æŸ¥æ˜¯å¦æœ‰åœ–ç‰‡
	var texture = DataManager.get_card_texture(card_data.card_id)

	if texture:
		# 1. é¡¯ç¤ºåœ–ç‰‡
		card_texture.texture = texture
		card_texture.visible = true
		# 2. éš±è—èƒŒæ™¯é¡è‰² (è¨­ç‚ºé€æ˜)
		card_sprite.color = Color(0, 0, 0, 0)
	else:
		# 1. éš±è—åœ–ç‰‡
		card_texture.texture = null
		card_texture.visible = false
		
		# 2. é¡¯ç¤ºèƒŒæ™¯é¡è‰² (æ ¹æ“šå…ƒç´ )
		match card_data.element:
			Constants.Element.METAL:
				card_sprite.color = Color(0.9, 0.9, 0.95)
			Constants.Element.WOOD:
				card_sprite.color = Color(0.3, 0.8, 0.3)
			Constants.Element.WATER:
				card_sprite.color = Color(0.3, 0.5, 0.9)
			Constants.Element.FIRE:
				card_sprite.color = Color(0.9, 0.3, 0.2)
			Constants.Element.EARTH:
				card_sprite.color = Color(0.8, 0.6, 0.3)
			_:
				card_sprite.color = Color(0.6, 0.6, 0.6)

func update_display():
	"""æ›´æ–°é¡¯ç¤º"""
	if not card_data:
		return

	name_label.text = card_data.card_name
	hp_label.text = "HP:%d" % card_data.current_hp

	# âœ… ä½¿ç”¨ç•¶å‰å€ç‡è¨ˆç®—æ”»æ“ŠåŠ›é¡¯ç¤º
	var multiplier = current_multipliers.get(card_data.element, 1.0)
	var display_atk = int(card_data.current_atk * multiplier)
	atk_label.text = "ATK:%d" % display_atk

	sp_label.text = "SP:%d/%d" % [card_data.current_sp, card_data.max_sp]

	if card_data.active_skill_current_cd > 0:
		skill_cd_label.text = "æŠ€èƒ½CD:%d" % card_data.active_skill_current_cd
	else:
		skill_cd_label.text = "æŠ€èƒ½å°±ç»ª"
		skill_cd_label.modulate = Color.GREEN

	# æ ¹æ®SPæ›´æ–°é¢œè‰²
	if card_data.current_sp > 0:
		panel.modulate = Color.WHITE
	else:
		panel.modulate = Color(0.5, 0.5, 0.5)  # SPè€—å°½æ—¶å˜ç°

# ==================== è¼¸å…¥è™•ç† ====================

func update_atk_display(multipliers: Dictionary):
	"""âœ… æ ¹æ“šæ–¬æ“Šå€ç‡æ›´æ–°ATKé¡¯ç¤º"""
	if not card_data:
		return

	# ä¿å­˜å€ç‡
	current_multipliers = multipliers

	# ä½¿ç”¨ update_display() ä¾†æ›´æ–°ï¼Œå®ƒæœƒè‡ªå‹•ä½¿ç”¨ä¿å­˜çš„å€ç‡
	var multiplier = multipliers.get(card_data.element, 1.0)
	var dynamic_atk = int(card_data.current_atk * multiplier)
	atk_label.text = "ATK:%d" % dynamic_atk

func _gui_input(event: InputEvent):
	if not can_act or not card_data:
		return

	if event is InputEventMouseButton:
		if event.button_index == MOUSE_BUTTON_LEFT:
			if event.pressed:
				# é–‹å§‹æ‹–æ›³
				is_dragging = true
				drag_start_pos = global_position
				original_position = global_position  # æ›´æ–°åŸå§‹ä½ç½®
				z_index = 100  # âœ¨ è¨­ç½®é«˜ z_indexï¼Œç¢ºä¿åœ¨æœ€ä¸Šå±¤
				card_clicked.emit(self)
			else:
				# çµæŸæ‹–æ›³
				if is_dragging:
					check_drop_target()
				is_dragging = false
				z_index = 0  # âœ¨ æ¢å¾©æ­£å¸¸ z_index
				# ç¢ºä¿è¿”å›åŸä½
				reset_position()

		elif event.button_index == MOUSE_BUTTON_RIGHT and event.pressed:
			# å³éµä½¿ç”¨æŠ€èƒ½
			if card_data.active_skill:
				skill_button_pressed.emit(self)

func _process(_delta):
	if is_dragging:
		# è·Ÿéš¨æ»‘é¼ 
		global_position = get_global_mouse_position() - size / 2

func check_drop_target():
	"""æª¢æŸ¥æ‹–æ”¾ç›®æ¨™"""
	var mouse_pos = get_global_mouse_position()

	# ç²å– BattleScene
	var battle_scene = get_tree().current_scene
	if not battle_scene:
		reset_position()
		return

	# æŸ¥æ‰¾ EnemyContainer
	var enemy_container = battle_scene.get_node_or_null("EnemyArea/EnemyContainer")
	if not enemy_container:
		reset_position()
		return

	# éæ­·æ‰€æœ‰æ•µäººç¯€é»ï¼Œæª¢æŸ¥æ˜¯å¦æ‹–åˆ°æ•µäººä¸Š
	for enemy_node in enemy_container.get_children():
		if enemy_node.has_method("get_enemy_data"):
			# æª¢æŸ¥æ»‘é¼ æ˜¯å¦åœ¨æ•µäººç¯€é»çš„ç¯„åœå…§
			var enemy_rect = Rect2(enemy_node.global_position, enemy_node.size)
			if enemy_rect.has_point(mouse_pos):
				# æ‰¾åˆ°ç›®æ¨™æ•µäºº
				var enemy_data = enemy_node.get_enemy_data()
				print("ğŸ¯ [BattleCard] é¸ä¸­æ•µäºº: %s (ID: %s, ä½ç½®: %v)" % [enemy_data.enemy_name, enemy_data.enemy_id, enemy_node.global_position])
				card_dragged_to_enemy.emit(self, enemy_node)
				reset_position()
				return

	# æ²’æœ‰æ‰¾åˆ°ç›®æ¨™ï¼Œè¿”å›åŸä½
	reset_position()

func reset_position():
	"""é‡ç½®åˆ°åŸå§‹ä½ç½®"""
	global_position = original_position

func set_interactable(enabled: bool):
	"""è¨­å®šæ˜¯å¦å¯äº’å‹•"""
	can_act = enabled
	# âœ… ç§»é™¤è®Šæš—æ•ˆæœï¼Œä¿æŒåŸè‰²ï¼ˆé¿å…æ–¬æ“Šæ™‚è®Šæš—å½±éŸ¿è¦–è¦ºï¼‰
	# æ³¨æ„ï¼šcan_act ä»ç„¶æœƒæ§åˆ¶æ˜¯å¦èƒ½é»æ“Š
	modulate = Color.WHITE

func play_attack_animation(target_position: Vector2):
	"""æ’­æ”¾æ”»æ“Šå‹•ç•«"""
	var start_pos = global_position

	var tween = create_tween()
	tween.set_trans(Tween.TRANS_QUAD)
	tween.set_ease(Tween.EASE_IN_OUT)

	# å¿«é€Ÿè¡å‘ç›®æ¨™
	tween.tween_property(self, "global_position", target_position, 0.2)
	# è¿”å›åŸä½
	tween.tween_property(self, "global_position", start_pos, 0.2)

	# å‹•ç•«çµæŸå¾Œç¢ºä¿ä½ç½®æ­£ç¢º
	await tween.finished
	global_position = original_position

# ==================== è¦–è¦ºåé¥‹å‹•ç•« ====================

func on_element_eliminated(element: Constants.Element):
	"""ç•¶æ¶ˆé™¤å°æ‡‰å±¬æ€§çš„éˆç æ™‚èª¿ç”¨"""
	if not card_data or card_data.element != element:
		return

	# ç´¯ç©æ¶ˆé™¤æ¬¡æ•¸
	slash_element_count += 1

	# æ’­æ”¾è·³èºå‹•ç•«
	play_bounce_animation()

	# æ›´æ–°ç™¼å…‰æ•ˆæœ
	update_glow_effect()

func play_bounce_animation():
	"""æ’­æ”¾è·³èºå‹•ç•«"""
	if is_bouncing:
		return  # å¦‚æœæ­£åœ¨è·³èºï¼Œä¸é‡è¤‡è§¸ç™¼

	is_bouncing = true
	var original_pos = position
	var bounce_height = -20.0  # è·³èµ·çš„é«˜åº¦ï¼ˆåƒç´ ï¼‰

	var tween = create_tween()
	tween.set_trans(Tween.TRANS_QUAD)
	tween.set_ease(Tween.EASE_OUT)

	# è·³èµ·ï¼ˆæ›´å¿«é€Ÿåº¦ï¼‰
	tween.tween_property(self, "position:y", original_pos.y + bounce_height, 0.08)
	tween.set_ease(Tween.EASE_IN)
	# è½ä¸‹ï¼ˆæ›´å¿«é€Ÿåº¦ï¼‰
	tween.tween_property(self, "position:y", original_pos.y, 0.08)

	await tween.finished
	is_bouncing = false

func update_glow_effect():
	"""æ›´æ–°é‚Šæ¡†æµå…‰æ•ˆæœï¼ˆæ ¹æ“šç´¯ç©æ¬¡æ•¸èª¿æ•´äº®åº¦ï¼Œä¸¦ä¿æŒç™¼å…‰ç‹€æ…‹ï¼‰"""
	if not panel or not card_data:
		return

	var style_box = panel.get_theme_stylebox("panel")
	if not (style_box is StyleBoxFlat):
		return

	# å‰µå»ºå‰¯æœ¬ä»¥é¿å…å½±éŸ¿å…¶ä»–å¯¦ä¾‹
	style_box = style_box.duplicate()

	# æ ¹æ“šå…ƒç´ ç²å–åŸºç¤é¡è‰²
	var element_color = get_element_color(card_data.element)

	# è¨ˆç®—ç™¼å…‰å¼·åº¦ï¼ˆ1-5æ¬¡ï¼Œ5æ¬¡æœ€äº®ï¼‰
	var intensity = min(slash_element_count, 5) / 5.0

	# è¨­ç½®é‚Šæ¡†å¯¬åº¦ï¼ˆç´¯ç©è¶Šå¤šé‚Šæ¡†è¶Šç²—ï¼‰
	var border_width = 2 + int(intensity * 3)  # 2-5 åƒç´ 
	style_box.border_width_left = border_width
	style_box.border_width_top = border_width
	style_box.border_width_right = border_width
	style_box.border_width_bottom = border_width

	# æœ€çµ‚ä¿æŒçš„ç™¼å…‰é¡è‰²ï¼ˆæŒçºŒç™¼äº®ï¼‰
	var final_glow_color = element_color.lerp(Color.WHITE, intensity * 0.6)
	var final_shadow_size = int(intensity * 12)

	# âœ¨ æµå…‰æ•ˆæœï¼šä¸‰æ®µå¼é–ƒçˆå¾Œä¿æŒç™¼äº®
	var tween = create_tween()
	tween.set_trans(Tween.TRANS_CUBIC)
	tween.set_ease(Tween.EASE_OUT)

	# ç²å–ç•¶å‰é¡è‰²ï¼ˆå¦‚æœå·²ç¶“åœ¨ç™¼å…‰ï¼Œå¾ç•¶å‰é¡è‰²é–‹å§‹ï¼‰
	var current_color = style_box.border_color if style_box.border_color != Color.TRANSPARENT else element_color

	# ç¬¬ä¸€æ¬¡é–ƒçˆï¼šå¿«é€Ÿè®Šäº®
	var bright_color_1 = element_color.lerp(Color.WHITE, intensity * 0.8)
	tween.tween_method(func(color):
		style_box.border_color = color
		style_box.shadow_color = Color(color.r, color.g, color.b, intensity * 0.9)
		style_box.shadow_size = int(intensity * 15)
		panel.add_theme_stylebox_override("panel", style_box)
	, current_color, bright_color_1, 0.1)

	# ç¬¬äºŒæ¬¡é–ƒçˆï¼šç¨å¾®å›è½ï¼ˆæµå…‰æ•ˆæœï¼‰
	var mid_color = element_color.lerp(Color.WHITE, intensity * 0.5)
	tween.tween_method(func(color):
		style_box.border_color = color
		style_box.shadow_color = Color(color.r, color.g, color.b, intensity * 0.8)
		style_box.shadow_size = int(intensity * 10)
		panel.add_theme_stylebox_override("panel", style_box)
	, bright_color_1, mid_color, 0.1)

	# ç¬¬ä¸‰æ¬¡é–ƒçˆï¼šå†æ¬¡é”åˆ°é«˜å…‰
	var bright_color_2 = element_color.lerp(Color.WHITE, intensity * 0.9)
	tween.tween_method(func(color):
		style_box.border_color = color
		style_box.shadow_color = Color(color.r, color.g, color.b, intensity * 0.95)
		style_box.shadow_size = int(intensity * 18)
		panel.add_theme_stylebox_override("panel", style_box)
	, mid_color, bright_color_2, 0.12)

	# âœ¨ æœ€å¾Œï¼šä¿æŒåœ¨ç™¼å…‰ç‹€æ…‹ï¼ˆä¸å›åˆ°åŸè‰²ï¼‰
	tween.tween_method(func(color):
		style_box.border_color = color
		style_box.shadow_color = Color(color.r, color.g, color.b, intensity * 0.85)
		style_box.shadow_size = final_shadow_size
		panel.add_theme_stylebox_override("panel", style_box)
	, bright_color_2, final_glow_color, 0.15)

func reset_slash_effects():
	"""é‡ç½®æ–¬æ“Šç›¸é—œçš„è¦–è¦ºæ•ˆæœï¼ˆæ¯æ¬¡æ–°æ–¬æ“Šé–‹å§‹æ™‚èª¿ç”¨ï¼‰"""
	slash_element_count = 0

	# é‡ç½®é‚Šæ¡†ç‚ºåŸºç¤æ¨£å¼
	if panel and card_data:
		var style_box = panel.get_theme_stylebox("panel")
		if style_box is StyleBoxFlat:
			style_box = style_box.duplicate()

			# æ¢å¾©åŸºç¤é‚Šæ¡†
			var element_color = get_element_color(card_data.element)
			style_box.border_color = element_color
			style_box.border_width_left = 2
			style_box.border_width_top = 2
			style_box.border_width_right = 2
			style_box.border_width_bottom = 2
			style_box.shadow_size = 0

			panel.add_theme_stylebox_override("panel", style_box)

func get_element_color(element: Constants.Element) -> Color:
	"""ç²å–å…ƒç´ å°æ‡‰çš„é¡è‰²"""
	match element:
		Constants.Element.FIRE:
			return Color(1.0, 0.3, 0.2, 1.0)  # ç«ç´…è‰²
		Constants.Element.WATER:
			return Color(0.2, 0.5, 1.0, 1.0)  # æ°´è—è‰²
		Constants.Element.WOOD:
			return Color(0.2, 0.8, 0.3, 1.0)  # æœ¨ç¶ è‰²
		Constants.Element.METAL:
			return Color(0.9, 0.9, 0.9, 1.0)  # é‡‘éŠ€è‰²
		Constants.Element.EARTH:
			return Color(0.8, 0.6, 0.3, 1.0)  # åœŸé»ƒè‰²
		Constants.Element.HEART:
			return Color(1.0, 0.5, 0.8, 1.0)  # å¿ƒç²‰è‰²
		_:
			return Color(0.5, 0.5, 0.8, 1.0)  # é»˜èª

# ==================== æŠ€èƒ½æ¨™è¨˜ç›¸é—œ ====================

func create_skill_marker():
	"""å‰µå»ºæŠ€èƒ½æ¨™è¨˜ Labelï¼ˆâš”ï¸ï¼‰"""
	skill_marker_label = Label.new()
	skill_marker_label.text = "âš”ï¸"
	skill_marker_label.add_theme_font_size_override("font_size", 32)
	skill_marker_label.modulate = Color(1.0, 0.8, 0.2, 1.0)  # é‡‘è‰²

	# è¨­ç½®ä½ç½®ï¼ˆå³ä¸Šè§’ï¼‰
	skill_marker_label.position = Vector2(size.x - 40, 0)
	skill_marker_label.z_index = 10

	# åˆå§‹éš±è—
	skill_marker_label.visible = false

	add_child(skill_marker_label)

func show_skill_marker():
	"""é¡¯ç¤ºæŠ€èƒ½æ¨™è¨˜ï¼ˆæŠ€èƒ½ç”Ÿæ•ˆæœŸé–“ï¼‰"""
	if skill_marker_label:
		skill_marker_label.visible = true
		# æ·»åŠ é–ƒçˆå‹•ç•«
		var tween = create_tween()
		tween.set_loops()
		tween.tween_property(skill_marker_label, "modulate:a", 0.5, 0.5)
		tween.tween_property(skill_marker_label, "modulate:a", 1.0, 0.5)

func hide_skill_marker():
	"""éš±è—æŠ€èƒ½æ¨™è¨˜ï¼ˆæŠ€èƒ½çµæŸï¼‰"""
	if skill_marker_label:
		skill_marker_label.visible = false
		# åœæ­¢æ‰€æœ‰å‹•ç•«
		var tween = skill_marker_label.get_tree().get_processed_tweens()
		for t in tween:
			if t.is_valid():
				t.kill()
